syntax = "proto3";

package mexc;

// A single book ticker update
message PublicBookTicker {
  string bidPrice = 1;
  string bidQuantity = 2;
  string askPrice = 3;
  string askQuantity = 4;
}

// Batch aggregation wrapper for multiple book ticker updates
message PublicBookTickerBatch {
  repeated PublicBookTicker items = 1;
}

// The full response message for a batch book ticker subscription
message BatchBookTickerResponse {
  string channel = 1;
  string symbol = 2;
  int64 sendTime = 3;
  PublicBookTickerBatch publicBookTickerBatch = 4;
}
